--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   min-width: 100%;
   background-size: cover;
   background-position: center;
+  /* border: solid 3px red; */
 }
 
 .App-logo {
@@ -21,44 +22,48 @@
 
 .App-header {
   /* background-color: #282c34; */
-  min-height: 100vh;
+  min-height: 10vh;
+  width: 50%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-  border: 3px red;
+  justify-content: space-around;
+  font-size: calc(5px + 2vmin);
+  /* border: solid 3px red; */
 }
 
 .App-link {
+  width: 50%;
   color: #61dafb;
 }
 
-.headerlinks {
-  display:  flex;
-  flex-direction: column;
-  border: 3px red;
-  
+.main {
+  display: flex;
+  justify-content: center;
+  /* border: solid 3px purple; */
 }
+
 .home {
-  border: 3px red;
+  
+ 
+
+  /* border: solid 3px red; */
 
 }
 .bio{
-  border: 3px red;
+  /* border: solid 3px red; */
 
 }
 .tour {
-  border: 3px red;
+  /* border: solid 3px red; */
 
 }
 .news {
-  border: 3px red;
+  /* border: solid 3px red; */
 
 }
 .merch {
-  border: 3px red;
+  /* border: solid 3px red; */
 
 }
 
