added old vegas pics

--- a/src/App.css
+++ b/src/App.css
@@ -76,7 +76,8 @@
 }
 
 .body {
-  border: solid 3px red;
+ 
+  border: solid 50px black; 
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -84,6 +85,11 @@
   height: 50%;
   margin-left: 30%;
   padding: 50px 50px;
+  border-image-source: url(./images/ropeborder.jpg)  ;
+  border-image-slice: 23%;
+  border-image-width: 25%;
+  border-image-outset: 50%;
+  border-image-repeat: round;
   
   
 }
