--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,5 @@
 .App {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
   text-align: center;
   background-image: url(./images/dave-hoefler-eYJwtMpuhJQ-unsplash.jpg);
   position: fixed;
@@ -12,38 +10,38 @@
   border: solid 3px red; 
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.main {
+  display: flex;
+  flex-direction: column;
+  width: fit-content;
+  padding: 5%;
+  width: 80%;
+  /* flex-direction: column;
+  justify-content: center;
+  padding: 20;
+  height: 100%;*/
+  border: solid 3px purple;  
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
-  /* background-color: #282c34; */
-  min-height: 10vh;
-  width: 50%;
   display: flex;
   flex-direction: row;
-  align-items: center;
   justify-content: space-around;
-  font-size: calc(5px + 2vmin);
+  /* background-color: #282c34; */
+  /* min-height: 10vh;
+  width: 50%;
+  
+  
+  
+  justify-content: space-around;
+  font-size: calc(5px + 2vmin); */
   border: solid 3px red; 
 }
 
 
 
-.main {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  height: 100%;
-  border: solid 3px purple; 
-}
+
 
 .home {
   color: red;
@@ -84,38 +82,31 @@
  
   border: solid 3px black; 
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column;
   justify-content: space-around;
   width: 40%;
-  height: 50%;
+  height: 50%; */
   /* min-height: 50vh;
   margin-left: 27%; */
-  padding: 10px 10px;
-  position: absolute;
+  /* padding: 10px 10px;
+  position: absolute; */
  }
 .footer {
   display: flex;
-  justify-content: center;
+  /* justify-content: center;
   height: 100%;
-  width: 30%;
-  border: solid 3px red;
+  width: 30%;*/
+  border: solid 3px red; 
 }
 
-.golden-nugget {
+/* .golden-nugget {
   display: flex;
   flex-direction: column;
   justify-content: center;
   height: 10%;
-  width: 20%;
+  width: 20%; 
   
-}
+}*/
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
  
