--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,4 @@
 .App {
-  display: flex;
-  text-align: center;
   background-image: url(./images/dave-hoefler-eYJwtMpuhJQ-unsplash.jpg);
   position: fixed;
   min-height: 100vh;
@@ -13,13 +11,8 @@
 .main {
   display: flex;
   flex-direction: column;
-  width: fit-content;
-  padding: 5%;
-  width: 80%;
-  /* flex-direction: column;
   justify-content: center;
-  padding: 20;
-  height: 100%;*/
+  height: 100%;
   border: solid 3px purple;  
 }
 
@@ -28,6 +21,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  align-items: center;
   /* background-color: #282c34; */
   /* min-height: 10vh;
   width: 50%;
