--- a/src/App.css
+++ b/src/App.css
@@ -5,31 +5,26 @@
   min-width: 100%;
   background-size: cover;
   background-position: center;
-  border: solid 3px red; 
+  
 }
 
 .main {
   display: flex;
+  align-items: center;
   flex-direction: column;
-  justify-content: center;
-  height: 100%;
+  min-height: 100vh;
+  width: 100%;
   border: solid 3px purple;  
 }
 
 
 .App-header {
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+  flex-direction: column-reverse;
   align-items: center;
-  /* background-color: #282c34; */
-  /* min-height: 10vh;
   width: 50%;
-  
-  
-  
-  justify-content: space-around;
-  font-size: calc(5px + 2vmin); */
+  margin: 5px;
+  font-size: calc(5px + 2vmin);  
   border: solid 3px red; 
 }
 
@@ -40,67 +35,59 @@
 .home {
   color: red;
   text-decoration: none;
-  
- 
-
-  /* border: solid 3px red; */
+  border: solid 3px red;
 
 }
 .bio{
   color: purple;
   text-decoration: none;
- 
-  /* border: solid 3px red; */
+  border: solid 3px red;
 
 }
+
 .tour {
   color: green;
   text-decoration: none;
-  /* border: solid 3px red; */
-
+  border: solid 3px red;
 }
 .news {
   color: hotpink;
   text-decoration: none;
-  /* border: solid 3px red; */
+  border: solid 3px red;
 
 }
 .merch {
   color: blue;
   text-decoration: none;
-  /* border: solid 3px red; */
+  border: solid 3px red;
 
 }
 
 .body {
- 
-  border: solid 3px black; 
   display: flex;
-  /* flex-direction: column;
-  justify-content: space-around;
-  width: 40%;
-  height: 50%; */
-  /* min-height: 50vh;
-  margin-left: 27%; */
-  /* padding: 10px 10px;
-  position: absolute; */
+  align-items: center;
+  justify-content: center;
+  width: 50%;
+  padding: 20px;
+  border: solid 3px black; 
+ 
+ 
  }
+
 .footer {
   display: flex;
-  /* justify-content: center;
-  height: 100%;
-  width: 30%;*/
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  margin: 3%;
   border: solid 3px red; 
 }
 
-/* .golden-nugget {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  height: 10%;
-  width: 20%; 
-  
-}*/
+.golden-nugget {
+  height: 30%;
+  width: 30%; 
+  margin-left: 35%;
+  }
 
 
  
