added syling files for each page

--- a/src/styling/App.css
+++ b/src/styling/App.css
@@ -1,5 +1,5 @@
 .App {
-  background-image: url(./images/dave-hoefler-eYJwtMpuhJQ-unsplash.jpg);
+  background-image: url(../images/dave-hoefler-eYJwtMpuhJQ-unsplash.jpg);
   position: fixed;
   min-height: 100vh;
   min-width: 100%;
