--- a/src/styling/newsstyling.css
+++ b/src/styling/newsstyling.css
@@ -1,3 +1,19 @@
 .newspage-container {
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+   
+
+}
+
+.news-title {
+    display: flex;
+    justify-content: center;
+
+
+}
+.news-body {
+    display: flex;
+    justify-content: center;
 }
